--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: rgb(2, 2, 2);
   height: 150px;
   padding: 20px;
   color: white;
