--- a/src/App.css
+++ b/src/App.css
@@ -26,9 +26,10 @@
 .App-universe{
   height: 100%;
   padding: 0 0 0 0;
-  margin: 0 0 0 0;
-  min-height: 900px;
-  width: 100%;
+  margin: 0;
+  margin-left: 2%;
+  margin-right: 2%;
+  min-height: 800px;  
 }
 
 @keyframes App-logo-spin {
