--- a/src/Header.css
+++ b/src/Header.css
@@ -4,7 +4,7 @@
   }
   
   .header {
-    background-color: #222;
+    background-color: rgb(0, 0, 0);
     height: 50px;
     padding: 20px;
     color: white;
